--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- MODEL MAPPER  -->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+
         <!--SWAGGGER-->
         <dependency>
             <groupId>org.springdoc</groupId>
